@@ -26,6 +26,7 @@
             "Test::CheckManifest" : "1.29",
             "Test::Kwalitee" : "1.22",
             "Test::More" : "0.88",
+            "Test::PAUSE::Permissions" : "0",
             "Test::Pod" : "1.41",
             "Test::Pod::Coverage" : "1.08",
             "Test::Pod::Spelling::CommonMistakes" : "1.000",
@@ -61,7 +62,7 @@
          "web" : "https://github.com/p5-shorten/www-shorten-shorl"
       }
    },
-   "version" : "2.101",
+   "version" : "2.201",
    "x_contributors" : [
       "Chase Whitener <cwhitener@gmail.com>",
       "Dave Cross <dave@dave.org.uk>"
