@@ -1,9 +1,11 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.043.
+# This Makefile.PL for WWW-Shorten-Shorl was generated by
+# Dist::Zilla::Plugin::MakeMaker::Awesome 0.35.
+# Don't edit it but the dist.ini and plugins used to construct it.
+
 use strict;
 use warnings;
 
 use 5.006;
-
 use ExtUtils::MakeMaker;
 
 my %WriteMakefileArgs = (
@@ -27,12 +29,11 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "Test::More" => "0.88"
   },
-  "VERSION" => "2.101",
+  "VERSION" => "2.201",
   "test" => {
     "TESTS" => "t/*.t"
   }
 );
-
 
 my %FallbackPrereqs = (
   "Carp" => 0,
@@ -43,7 +44,6 @@ my %FallbackPrereqs = (
   "strict" => 0,
   "warnings" => 0
 );
-
 
 unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
   delete $WriteMakefileArgs{TEST_REQUIRES};
