@@ -13,6 +13,10 @@ version = 2.101
 -remove = Readme
 -remove = GatherDir
 -remove = ExtraTests
+-remove = MakeMaker
+
+[MakeMaker::Awesome]
+[NextRelease]
 
 [GatherDir]
 exclude_filename = Makefile.PL
@@ -27,6 +31,7 @@ user    = p5-shorten
 [CheckChangeLog]
 [PkgVersion]
 [PodSyntaxTests]
+[Test::PAUSE::Permissions]
 [Test::Pod::Coverage::Configurable]
 [Test::PodSpelling]
 stopword = makealongerlink
