@@ -1,4 +1,8 @@
-2.101   2016-03-13
+Revision history for {{$dist->name}}
+
+{{$NEXT}}
+    - added author and release tests
+    - made Travis test a bit more in-depth
 
 2.100   2016-03-13
     - version bump up to fix a problem with another release
